[package]
name = "transform2"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "math", "games"]
categories = ["game-development"]
repository = "https://github.com/ickshonpe/transform2"
readme = "README.md"
description = "2D transform for Bevy"

[dependencies.bevy]
version = "0.8"
default-features = false
features = ["render"]

[dev-dependencies]
bevy = "0.8"